# 2026-gesundheitslagebild-2

./: .dockerignore  .env.example  .gitignore  DOKUMENTATION.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  hl7_kapazitaet.py  models.py  pyproject.toml  requirements.txt  smoke_test.py
data/: IVENA_Fw_Hackathon.xlsx  krankenhaeuser_dedup.csv  krankenhaeuser_merged.csv  krankenhaus_daten_2024.csv
hackathon/: __init__.py  api.py  config.py  dispatch.py  here_client.py  here_traffic.py  hl7_ingest.py  ivena_mapping.py  models.py  routes.py  seed.py  simulator.py  timecapsule.py
scripts/: add_sk_capability.py  deduplicate_krankenhaeuser.py  hl7_adt_generator.py  merge_krankenhaeuser.py
static/: style.css
static/js/: dashboard.js
templates/: adt.html  base.html  batches.html  belegung.html  dashboard.html  fahrt_detail.html  fahrten.html  index.html  info.html  ivena_matching.html  krankenhaeuser.html  krankenhaus_detail.html  patient_detail.html  patients.html  simulator.html  timecapsule.html  traffic.html  transport_detail.html
