[project]
name = "hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Müller",email = "dev@lukas-m.de"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (==3.1.1)",
    "flask-migrate (==4.1.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
